feedback and order

--- a/src/app/confirm-purchase/confirm-purchase.component.css
+++ b/src/app/confirm-purchase/confirm-purchase.component.css
@@ -9,6 +9,11 @@
     flex-direction: column;
 }
 
+.inputData2 {
+    justify-content: center;
+    align-items: center;
+}
+
 .inputLabel {
     flex-direction: initial !important;
 }
