--- a/src/app/feedback-page/feedback-page.component.html
+++ b/src/app/feedback-page/feedback-page.component.html
@@ -1,1 +1,42 @@
-<p>feedback-page works!</p>
+<div class="row pt-2" style="width: 80%; margin-left: 10%;">
+    <div class="row justify-content-center">
+        <div class="col">
+            <h1 id="modal-title" align="center">Feedback</h1>
+        </div>
+
+    </div>
+    <div class="col mat-elevation-z8 px-0" align="center">
+        <table [dataSource]="dataSource" mat-table matSort>
+            <ng-container matColumnDef="Scrittore">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header="Scrittore" style="color: black;">Scrittore</th>
+                <td mat-cell *matCellDef="let element">{{ element.scrittore.username }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="Voto">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header="Voto" style="color: black;">Voto</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.voto }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="Descrizione">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header="Descrizione" style="color: black;">Descrizione</th>
+
+                <td mat-cell *matCellDef="let element">
+                    {{ element.descrizione }}
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+            <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">
+                    Non trovo nessun risultato con questa ricerca
+                </td>
+            </tr>
+        </table>
+        <app-page-spinner *ngIf="loading"></app-page-spinner>
+        <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+    </div>
+</div>
