--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,4 +1,10 @@
 <div class="row pt-2" style="width: 80%; margin-left: 10%;">
+    <div class="row justify-content-center">
+        <div class="col">
+            <h1 id="modal-title" align="center">Ordini Effettuati</h1>
+        </div>
+
+    </div>
     <div class="col mat-elevation-z8 px-0" align="center">
         <table [dataSource]="dataSource" mat-table matSort>
             <ng-container matColumnDef="Mittente">
