--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,6 +42,7 @@
             <button mat-menu-item>T-shirt</button>
             <button mat-menu-item>Trousers</button>
         </mat-menu>
+        <button mat-button align="end" color="#ffffff" (click)="add()">Aggiungi Vestito</button>
     </mat-toolbar-row>
 
 
