--- a/src/app/confirm-purchase/confirm-purchase.component.html
+++ b/src/app/confirm-purchase/confirm-purchase.component.html
@@ -64,6 +64,7 @@
                     </div>
                 </mat-step>
             </mat-horizontal-stepper>
+            <app-page-spinner *ngIf="loading"></app-page-spinner>
         </div>
     </div>
 </div>
