--- a/src/app/setting/setting.component.html
+++ b/src/app/setting/setting.component.html
@@ -4,7 +4,7 @@
         <div class="col-xxl-6 col-xl-7 col-lg-8 col-md-10 col-sm-12 col-12" style="width: 90%;" align="center">
             <form [formGroup]="addForm" (ngSubmit)="onSubmit()" *ngIf="addForm">
                 <mat-card>
-                    <mat-card-header>
+                    <mat-card-header style="justify-content: center; display: flex;">
                         <mat-card-title>Informazioni Utente</mat-card-title>
                         <mat-card-subtitle>Cliccando sul singolo riquadro, puoi modificare le tue informazioni!
                         </mat-card-subtitle>
