--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid" style="overflow-y:hidden;">
-    <div class="row" style="background-color: #005172;">
+<div class="container-fluid" style="overflow-y: hidden;">
+    <div class="row" style="background-color: #005172;  position:static">
         <div class="col-10">
             <button mat-button (click)="reload('UOMO') " style="color: white;">UOMO</button>
             <button mat-button (click)="reload('DONNA') " style="color: white;">DONNA</button>
